# AT82.03-ML-Car-Price-Prediction

./: Prombot_st125923_A1.ipynb  Prombot_st125923_A2.ipynb  README.md  pyproject.toml  ruff.toml  train_model.ipynb
app/: docker-compose.yml
app/backend/: Dockerfile  app.py  pyproject.toml
app/backend/data/: impute_values.json
app/frontend/: package-lock.json  package.json
app/frontend/src/routes/: +page.server.ts  +page.svelte
app/nginx/: Dockerfile  default.conf
data/: test_processed.csv  train_processed.csv
