[project]
name = "at82-03-ml-car-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "nbconvert>=7.16.6",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pandoc>=2.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]
